      dpkg-query(1).
    - Use [option...] instead of [options] and friends.
    - Use italics or bold instead of surrounding the text with <>.
    - Correctly format text with bold and italics.
  * Refer to Sources and Packages files as part of a repository instead of
    as being of exclusive use or owned by APT, which has never been the case.

  [ Bill Allombert]
  * Add support for Build-Features: build-arch. Closes: #229357
    With this flag, dpkg-buildpackage will now run "debian/rules build-arch"
    or "debian/rules build-indep" instead of "debian/rules build" when
    appropriate.

  [ Updated dpkg translations ]
  * German (Sven Joachim). Closes: #620312
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Raphaël Hertzog <hertzog@debian.org>  Sat, 02 Apr 2011 09:21:26 +0200

dpkg (1.16.0.3) unstable; urgency=medium

  * Allow again Priority field values not known to dpkg. Regression
    introduced in 1.16.0.

 -- Guillem Jover <guillem@debian.org>  Wed, 04 May 2011 10:01:30 +0200

dpkg (1.16.0.2) unstable; urgency=high

  * Fix dpkg-split --auto to not fail when opening the new depot file.
  * Fix dpkg-split to correctly set the last part split size.
  * Fix build failure on DEB_BUILD_OPTIONS=noopt due to a missing <locale.h>
    include in gettext.h needed by the gettext context functions.

 -- Guillem Jover <guillem@debian.org>  Sat, 16 Apr 2011 00:14:15 +0200

dpkg (1.16.0.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix regression affecting dpkg -R. Closes: #620636
  * Don't fail during unpack if the system doesn't support changing timestamps
    of symlinks. Closes: #620679

 -- Guillem Jover <guillem@debian.org>  Tue, 05 Apr 2011 07:28:20 +0200

dpkg (1.16.0) unstable; urgency=low

  [ Guillem Jover ]
  * Use DPKG_MAINTSCRIPT_PACKAGE environment variable as package name on