@@ -132,6 +132,7 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     - Correctly format text with bold and italics.
   * Refer to Sources and Packages files as part of a repository instead of
     as being of exclusive use or owned by APT, which has never been the case.
+  * Unify somewhat dpkg-maintscript-helper --help output with other commands.
 
   [ Bill Allombert]
   * Add support for Build-Features: build-arch. Closes: #229357
